--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <title>My Portfolio</title>
   </head>
   <body>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+		<link rel="stylesheet" media="screen" href="href="https://fontlibrary.org/face/nemoy" type="text/css"/>" type="text/css"/> 
+		<script src="js/functions.js"></script>
     <p> dsfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
     </p>
   </body>
 </html>
 
-      
